--- a/Frontend/banglefront/.hintrc
+++ b/Frontend/banglefront/.hintrc
@@ -15,12 +15,7 @@
         "label": "off"
       }
     ],
-    "axe/text-alternatives": [
-      "default",
-      {
-        "image-alt": "off"
-      }
-    ],
+    "axe/text-alternatives": "off",
     "no-inline-styles": "off"
   }
 }
